# journo-llm

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  SETUP.md  docker-compose.yml  pyproject.toml  readme.md
journo_llm/: __init__.py  cli.py  data.py  train_modal.py
